# duckdb-sqlalchemy

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  PLANS.md  README.md  llms.txt  noxfile.py  pyproject.toml  release-please-config.json
.codex/environments/: environment.toml
.github/workflows/: lint.yml  pages.yml  publish.yaml  pythonapp.yaml  release-please.yml
docs/: README.md  alembic.md  configuration.md  connection-urls.md  getting-started.md  index.md  migration-from-duckdb-engine.md  motherduck.md  olap.md  overview.md  pandas-jupyter.md  roadmap.md  seo-checklist.md  types-and-caveats.md
docs/exec-plans/active/: 2026-03-27-maintenance-review.md  2026-03-30-maintenance-review.md  2026-03-31-maintenance-review.md
duckdb_engine/: __init__.py  config.py  datatypes.py  url.py
duckdb_engine/tests/: test_basic.py  test_datatypes.py  test_helpers.py
duckdb_sqlalchemy/: __init__.py  _arrow.py  _bulk_insert.py  _query.py  _row_shape.py  _statements.py  _validation.py  bulk.py  config.py  datatypes.py  motherduck.py  olap.py  url.py
duckdb_sqlalchemy/tests/: conftest.py  test_basic.py  test_core_units.py  test_datatypes.py  test_execution_options.py  test_helpers.py  test_pandas.py  test_pyarrow.py  test_validation.py  util.py
examples/: motherduck_arrow_reads.py  motherduck_read_scaling_per_user.py  sqlalchemy_example.py
