[project]
name = "duckdb_engine"
version = "0.17.0"
description = "SQLAlchemy driver for duckdb"
authors = [
    {name = "Elliana May", email = "me@mause.me"},
]
license = { text = "MIT" }
license-files = ["LICENSE.txt"]
requires-python = ">=3.10,<4"
readme = "README.md"
dependencies = [
    "duckdb>=1.0.0,<2",
    "sqlalchemy>=1.3.22",
    "packaging>=21",
]

[project.optional-dependencies]
dev = [
    "fsspec>=2025.2.0",
    "hypothesis>=6.75.2,<7",
    "jupysql>=0.11.1,<1",
    "mypy>=1.4,<2",
    "numpy",
    "pandas>=1",
    "pyarrow",
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
    "pytest-remotedata>=0.4,<1",
    "pytest-snapshot>=0.9,<1",
    "sqlalchemy[mypy]>=1.3.19",
    "toml>=0.10.2,<1",
]
devtools = [
    "github-action-utils",
    "nox",
    "pdbpp>=0.11,<1",
    "pre-commit>=4,<5",
]

[project.urls]
"Bug Tracker" = "https://github.com/Mause/duckdb_engine/issues"
Changelog = "https://github.com/Mause/duckdb_engine/releases"
repository = "https://github.com/Mause/duckdb_engine"

[project.entry-points."sqlalchemy.dialects"]
duckdb = "duckdb_engine:Dialect"

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --strict --strict-markers"
xfail_strict = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ['sqlalchemy.ext.mypy.plugin']

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ['E203', 'E501']

[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["duckdb_engine"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.hypothesis",
    "/.perf",
    "/.pytest_cache",
    "/.regression",
    "/.regressions",
    "/.venv",
    "/.venv310",
    "/dist",
    "/htmlcov",
    "/scripts",
    "/coverage.xml",
    "/results.xml",
]
