[project]
name = "duckdb_engine"
version = "0.17.0"
description = "SQLAlchemy driver for duckdb"
authors = [
    {name = "Elliana May", email = "me@mause.me"},
]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python = ">=3.9,<4"
readme = "README.md"
dependencies = [
    "duckdb>=0.5.0",
    "sqlalchemy>=1.3.22",
    "packaging>=21",
]

[project.urls]
"Bug Tracker" = "https://github.com/leonardovida/duckdb-sqlalchemy/issues"
Changelog = "https://github.com/leonardovida/duckdb-sqlalchemy/releases"
repository = "https://github.com/leonardovida/duckdb-sqlalchemy"

[project.optional-dependencies]
dev = [
    "numpy>=1.24,<2.0; python_version < '3.12'",
    "numpy>=1.26,<3.0; python_version >= '3.12' and python_version < '3.13'",
    "numpy>=2.0,<3.0; python_version >= '3.13'",
    "pyarrow>=22.0.0; python_version >= '3.10' and python_version < '3.13'",
    "pytest>=8.0.0,<9.0.0",
    "mypy>=1.4,<2.0",
    "hypothesis>=6.75.2,<7.0.0",
    "github-action-utils>=1.1.0,<2.0.0",
    "pandas>=1,<2.0; python_version < '3.12'",
    "pandas>=2.2,<3.0; python_version >= '3.12'",
    "jupysql>=0.11.1,<0.12.0",
    "sqlalchemy[mypy]>=1.3.19,<2.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-remotedata>=0.4.0,<0.5.0",
    "pytest-snapshot>=0.9.0,<1.0.0",
    "toml>=0.10.2,<0.11.0",
    "fsspec>=2025.2.0,<2026.0.0",
]
devtools = [
    "pdbpp>=0.11.0,<0.12.0",
    "pre-commit>=4.0.0; python_version >= '3.9'",
]

[project.entry-points."sqlalchemy.dialects"]
duckdb = "duckdb_engine:Dialect"

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics --strict --strict-markers"
xfail_strict = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ['sqlalchemy.ext.mypy.plugin']

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ['E203', 'E501']

[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"
